@@ -30,14 +30,16 @@ namespace bt = boost::posix_time;
 const std::locale formats[] = {
     std::locale(std::locale::classic(), new bt::time_input_facet("%Y-%m-%d %H:%M:%S%f")),
     std::locale(std::locale::classic(), new bt::time_input_facet("%Y/%m/%d %H:%M:%S%f")),
-    std::locale(std::locale::classic(), new bt::time_input_facet("%Y%m%d %H%M%S%F")),
+    std::locale(std::locale::classic(), new bt::time_input_facet("%Y%m%d %H%M%S%f")),
+    std::locale(std::locale::classic(), new bt::time_input_facet("%Y%m%d %H:%M:%S%f")),
     std::locale(std::locale::classic(), new bt::time_input_facet("%m/%d/%Y %H:%M:%S%f")),
     std::locale(std::locale::classic(), new bt::time_input_facet("%m-%d-%Y %H:%M:%S%f")),
-    std::locale(std::locale::classic(), new bt::time_input_facet("%d.%m.%Y %H:%M:%S%f")),
+    // std::locale(std::locale::classic(), new bt::time_input_facet("%d.%m.%Y %H:%M:%S%f")),
 
     std::locale(std::locale::classic(), new bt::time_input_facet("%Y-%b-%d %H:%M:%S%f")),
     std::locale(std::locale::classic(), new bt::time_input_facet("%Y/%b/%d %H:%M:%S%f")),
     std::locale(std::locale::classic(), new bt::time_input_facet("%Y%b%d %H%M%S%F")),
+    std::locale(std::locale::classic(), new bt::time_input_facet("%Y%b%d %H:%M:%S%F")),
     std::locale(std::locale::classic(), new bt::time_input_facet("%b/%d/%Y %H:%M:%S%f")),
     std::locale(std::locale::classic(), new bt::time_input_facet("%b-%d-%Y %H:%M:%S%f")),
     std::locale(std::locale::classic(), new bt::time_input_facet("%d.%b.%Y %H:%M:%S%f")),
@@ -45,6 +47,7 @@ const std::locale formats[] = {
     std::locale(std::locale::classic(), new bt::time_input_facet("%Y-%B-%d %H:%M:%S%f")),
     std::locale(std::locale::classic(), new bt::time_input_facet("%Y/%B/%d %H:%M:%S%f")),
     std::locale(std::locale::classic(), new bt::time_input_facet("%Y%B%d %H%M%S%f")),
+    std::locale(std::locale::classic(), new bt::time_input_facet("%Y%B%d %H:%M:%S%f")),
     std::locale(std::locale::classic(), new bt::time_input_facet("%B/%d/%Y %H:%M:%S%f")),
     std::locale(std::locale::classic(), new bt::time_input_facet("%B-%d-%Y %H:%M:%S%f")),
     std::locale(std::locale::classic(), new bt::time_input_facet("%d.%B.%Y %H:%M:%S%f")),
@@ -126,8 +129,7 @@ Rcpp::NumericVector anytime_impl(const Rcpp::Vector<RTYPE>& sv,
         // when given as an explicit argument. So we need to test here.
         // While we're at it, may as well test for obviously wrong data.
         int l = s.size();
-        if ((l < 8) ||          // impossibly short
-            (l == 9)) {         // 8 or 10 works, 9 cannot
+        if (l < 8) { 	        // too short
             Rcpp::stop("Inadmissable input: %s", s);
         } else if (l == 8) {    // turn YYYYMMDD into YYYY/MM/DD
             s = s.substr(0, 4) + "/" + s.substr(4, 2) + "/" + s.substr(6,2);
